[gd_scene format=3 uid="uid://d4ic74pf5y06r"]

[ext_resource type="Script" uid="uid://u8g8iqafvy3y" path="res://scenes/bosses/cirkul/cirkul_boss.gd" id="1_kp25c"]
[ext_resource type="Script" uid="uid://cm5nqhhsoudgf" path="res://scripts/arc_jump_component.gd" id="3_rsmr5"]
[ext_resource type="Script" uid="uid://daiox0dfvi3rr" path="res://scripts/health_component.gd" id="4_oank3"]
[ext_resource type="Texture2D" uid="uid://bw5ipcnadtd2m" path="res://assets/art/char/cirklo.png" id="5_bwo18"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5h3b"]
size = Vector2(48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8phmd"]
atlas = ExtResource("5_bwo18")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10etr"]
atlas = ExtResource("5_bwo18")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfr0y"]
atlas = ExtResource("5_bwo18")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_lhubj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8phmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10etr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfr0y")
}],
"loop": true,
"name": &"wait",
"speed": 5.0
}]

[node name="CirkulBoss" type="CharacterBody2D" unique_id=745381750]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_kp25c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1330330318]
shape = SubResource("RectangleShape2D_j5h3b")

[node name="JumpTimer" type="Timer" parent="." unique_id=1168054845]
one_shot = true

[node name="ArcJumpComponent" type="Node" parent="." unique_id=1518529322 node_paths=PackedStringArray("boss")]
script = ExtResource("3_rsmr5")
boss = NodePath("..")

[node name="HealthComponent" type="Node" parent="." unique_id=1708262361]
script = ExtResource("4_oank3")
metadata/_custom_type_script = "uid://daiox0dfvi3rr"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=2058476952]
sprite_frames = SubResource("SpriteFrames_lhubj")
animation = &"wait"
autoplay = "wait"
frame_progress = 0.7528772
